--- a/posts/2007-05-19-starcraft-2.md
+++ b/posts/2007-05-19-starcraft-2.md
@@ -5,7 +5,7 @@ create_time: 1179585917
 category: Random
 tags: []
 ---
- [![StarCraft2 Logo](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=216&g2_serialNumber=1)](http://www.starcraft2.com/)  
+ [![](wp-images/old/albums/random/starcraft.png)](/images/wp-images/old/albums/random/starcraft.png)  
   
 You wouldn't guess what I just saw when I was just "looking around". Oh well, yes it's written all over my face. It seems Blizzard has finally gotten up from its lazy ass enjoying all the gold piling in from their huge past hits StarCraft, WarCraft3 and the World of Warcraft. They have just announced that StarCraft 2 DOES exist, completely putting a stop to all the debates and flames around the forums of the world on whether we will ever see the world Arcturus and Tassadar has crafted over the Brood War. Well. The cat's out of the bag, and finally we hear the cries of the Zerg again.  
   
