--- a/posts/2007-05-26-comic-time-2.md
+++ b/posts/2007-05-26-comic-time-2.md
@@ -9,6 +9,6 @@ I wanted to make a post about Pirates of the Caribbean: At world's end, which I 
   
 \*hint. Read them from right to left top to bottom. (I dunno why but that's how Japanese comics are arranged)  
   
-<wpg2idlightbox>282</wpg2idlightbox><wpg2idlightbox>279</wpg2idlightbox><wpg2idlightbox>276</wpg2idlightbox>  
-<wpg2idlightbox>285</wpg2idlightbox>
+ ![](wp-images/old/albums/comix/kogata203.jpg) ![](wp-images/old/albums/comix/kogata202.jpg) ![](wp-images/old/albums/comix/kogata201.jpg)  
+ ![](wp-images/old/albums/comix/kogata204.jpg)
 
