--- a/posts/2007-06-23-figures.md
+++ b/posts/2007-06-23-figures.md
@@ -7,7 +7,7 @@ tags: []
 ---
   
 |   
- ![Haruhi](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=647&g2_serialNumber=1)  
+ [![](wp-images/old/albums/random/haruhi.jpg)](/images/wp-images/old/albums/random/haruhi.jpg)  
  |
   
 
@@ -19,7 +19,7 @@ New anime figures come out almost daily. Some that I recognize and some that I d
 
   
 |   
- ![Nagato](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=649&g2_serialNumber=1)  
+ [![](wp-images/old/albums/random/nagato_002.jpg)](/images/wp-images/old/albums/random/nagato_002.jpg)  
  |
   
 
@@ -30,7 +30,7 @@ What really makes me excited about these figures is the detail that goes into th
 
   
 |   
- ![Asakura](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=645&g2_serialNumber=1)  
+ [![](wp-images/old/albums/random/asakura.jpg)](/images/wp-images/old/albums/random/asakura.jpg)  
  |
   
 
@@ -41,7 +41,7 @@ Now, what's even better that releases on the main characters of the anime, is re
 
   
 |   
- ![Tsuruya](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=651&g2_serialNumber=1)  
+ [![](wp-images/old/albums/random/tsuruya.jpg)](/images/wp-images/old/albums/random/tsuruya.jpg)  
  |
   
 
