--- a/posts/2007-06-26-new-theme.md
+++ b/posts/2007-06-26-new-theme.md
@@ -5,7 +5,7 @@ create_time: 1182838339
 category: Random
 tags: []
 ---
- ![Iwasaki Minami](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=657&g2_serialNumber=1 "Iwasaki Minami")  
+ [![](wp-images/old/albums/random/minami_001.jpg)](/images/wp-images/old/albums/random/minami_001.jpg)  
   
 I haven't posted for the past 2 days now because of some social commitments I had to make. \>\_\<; Just when I thought I could be a hikkikomori again. Damn. I got home like 12 last night after after-badminton dinner. Gosh I could have sworn I would have eaten a car if I didn't get my dinner that night. It was so cold that my body's metabolism was flooring the throttle. But that wasn't enough, I had to add some heat with my wonderful little gas heater.  
   
