--- a/posts/2007-06-27-konagato-2.md
+++ b/posts/2007-06-27-konagato-2.md
@@ -7,5 +7,5 @@ tags: []
 ---
 Here's Konagato part 2! Its a continuation from [this](http://www.astrobunny.net/2007/06/22/yuki-nagato/ "Konagato 1")comic strip.  
   
- ![Konagato 2](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=661&g2_serialNumber=1)
+ [![](wp-images/old/albums/comix/konagato2.jpg)](/images/wp-images/old/albums/comix/konagato2.jpg)
 
