--- a/posts/2007-07-09-lucky-star-2.md
+++ b/posts/2007-07-09-lucky-star-2.md
@@ -5,7 +5,7 @@ create_time: 1183993140
 category: Manga
 tags: []
 ---
- ![LS5-1](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=843)  
+ [![](wp-images/old/albums/comix/LuckyStar5-1.jpg)](/images/wp-images/old/albums/comix/LuckyStar5-1.jpg)  
   
 Yes. Today's comic really is about different intentions. People usually have some sort of motive to be your friend or to talk to you. It's only normal. I've taken it for granted nowadays. Everytime friendliness comes around it's got to have a reason. But I think that sometimes its okay not to take it too hard. It always is good to kindly accept the good and giving some back by being friendly.  
   
