--- a/posts/2007-09-22-f-your-isp.md
+++ b/posts/2007-09-22-f-your-isp.md
@@ -7,11 +7,11 @@ tags: []
 ---
 I woke up this morning, took a shower, changed and turned on my PC and I was greeted with this:  
   
- [![](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=1000&g2_serialNumber=2)](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=998 "FLICK YOUR ISP")  
+ [![](wp-images/old/albums/fuckisp.jpg)](/images/wp-images/old/albums/fuckisp.jpg)  
   
 We love indirectness in competition. I hope they would come up with something like this next time:  
   
- ![](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=1001&g2_serialNumber=1)  
+ [![](wp-images/old/albums/imac_2Bv__2Bdell.png)](/images/wp-images/old/albums/imac_2Bv__2Bdell.png)  
   
 Not that I like slingshit, but sure enough it has caught my attention with its ad. I think they are better off an entertainment company.
 
