--- a/posts/2007-10-24-drawing.md
+++ b/posts/2007-10-24-drawing.md
@@ -7,9 +7,9 @@ tags: []
 ---
 So I sat down today after talking to MistaYoH...  
   
- [![astrobunny draws](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=1068&g2_serialNumber=2)](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=1066 "astrobunny draws")  
+ [![](wp-images/old/albums/draw.jpg)](/images/wp-images/old/albums/draw.jpg)  
   
 ... and ugh... man I'm a pervert.  
   
- [![500](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=1065&g2_serialNumber=2)](http://gallery.astrobunny.net/main.php?g2_view=core.DownloadItem&g2_itemId=1063 "Girl")
+ [![](wp-images/old/albums/sakuya.jpg)](/images/wp-images/old/albums/sakuya.jpg)
 
