--- a/posts/2007-06-20-lazy-lazy.md
+++ b/posts/2007-06-20-lazy-lazy.md
@@ -7,5 +7,5 @@ tags: []
 ---
 As a result of some extreme programming for my project this afternoon, and another episode of Zero no Tsukaima and Today in class 5-2, I have become very lazy and thus decided not to blog too much today. Instead, I will post up a little doujin comic strip I had lying around for all of your entertainment. ^^ Enjoy  
   
-<wpg2idlightbox>623</wpg2idlightbox>
+ ![](wp-images/old/albums/random/3.jpg)
 
